examples/test/testpolicy11655.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11655
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key5: value39
      key18: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value9
          key23: value43
      podSelector:
        matchLabels:
          key41: value29
